--- a/Readme
+++ b/Readme
@@ -23,4 +23,10 @@ const WhatDoesThisDo = function(){
 
 Both hashmaps have the same string 'hello world' which will be notice as 1 item in the hashmap per hashmap
 It prints differently each time. Because the key's are the same, the last value set will overwrite the first value.
-So hashmap 1 would pring 20 and hashmap 2 will print 10. 
+So hashmap 1 would pring 20 and hashmap 2 will print 10.
+
+1) Show your hash map after the insertion of keys 10, 22, 31, 4, 15, 28, 17, 88, 59
+into a hash map of length 11 using open addressing and a hash function k mod m, where k is the key and m is the length.
+
+2) Show your hash map after the insertion of the keys 5, 28, 19, 15, 20, 33, 12, 17, 10 into the hash map with collisions
+resolved by separate chaining. Let the hash table have a length m = 9, and let the hash function be k mod m.
